manifests/resources/monitoring/sync/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "cloudflare"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Grafana is the open source analytics & monitoring solution for every database.
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: grafana.png
    gethomepage.dev/name: Grafana
spec:
  tls:
  - hosts:
    - grafana.tomnowak.work
    secretName: grafana-internal-tls
  rules:
  - host: grafana.tomnowak.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
