manifests/resources/monitoring/sync/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "cloudflare"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Combine Prometheus metric alerts with log & trace alerts to improve accuracy.
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: prometheus.png
    gethomepage.dev/name: Prometheus
spec:
  tls:
  - hosts:
    - prometheus.tomnowak.work
    secretName: prometheus-internal-tls
  rules:
  - host: prometheus.tomnowak.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
